All_Component_DX/force-app/main/default/objects/Labor_Pricing__c/Labor_Pricing__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Labor pricing for covered labor</description>
    <label>Labor Pricing</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Labor Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>