All_Component_DX/force-app/main/default/objects/Labor_Pricing__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>Activity_Master__c</referenceTo>
    <relationshipLabel>Labor Pricing (Activity)</relationshipLabel>
    <relationshipName>Labor_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>