All_Component_DX/force-app/main/default/objects/Labor_Pricing__c/fields/Activity_Product__c.field-meta.xml
<CustomField>
    <fullName>Activity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Product</label>
    <referenceTo>Activity_Product__c</referenceTo>
    <relationshipLabel>Labor Pricing</relationshipLabel>
    <relationshipName>Labor_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>