All_Component_DX/force-app/main/default/objects/Labor_Pricing__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <formula>IF( NOT(ISBLANK(Activity_Product__c)) , TEXT( Activity_Product__r.Activity__r.Activity_Type__c ),  IF( NOT(ISBLANK(Activity__c)) , TEXT(Activity__r.Activity_Type__c), &apos;&apos; )  )</formula>
    <label>Activity Type</label>
    <type>Text</type>
</CustomField>