All_Component_DX/force-app/main/default/objects/Labor_Pricing__c/fields/Minimum_Labor__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Labor__c</fullName>
    <label>Minimum Labor (Mins)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>