All_Component_DX/force-app/main/default/objects/Labor_Pricing__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contract</label>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipLabel>Labor Pricing</relationshipLabel>
    <relationshipName>Labor_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>